welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:1: error: type mismatch;
 found   : Int(110)
 required: Boolean
def nearHundred(n:Int): Boolean = {return 90<=n<=110 or 190<=n<=210} 
                                                 ^nearHundred:1: error: type mismatch;
 found   : Int(210)
 required: Boolean
def nearHundred(n:Int): Boolean = {return 90<=n<=110 or 190<=n<=210} 
                                                                ^